Fix topic pill and buttons wrapping

--- a/src/scss/components/_colour.scss
+++ b/src/scss/components/_colour.scss
@@ -17,5 +17,6 @@ $white: #FFFFFF;
 //Grey
 $grey: #BFBFBF;
 $light-grey: #F9F9F9;
+$topic-pill: #EFEFEF;
 
 $focus-blue: #005FCC;
